role colour flicker fix

--- a/bear-smoothie/BearSmoothie.css
+++ b/bear-smoothie/BearSmoothie.css
@@ -242,3 +242,6 @@
     display: none;
 }
 .item-2hkk8m{ background-color: rgb(220,220,220); overflow: none;}
+:root, span {/*flicker fix*/
+    backface-visibility: hidden;
+}
